--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
   </head>
-  <body>
+  <body class="body_defaultback"><script type="text/javascript" src="main.js"></script></body>
+  <div class="positioner">
+    <div class="col2-container">
+      <div class="container container_w340">
         <div class="color-block">
           <div class="color-block__color-box color-block__color-box_darkshade100"></div>
           <div class="color-block__text-box">
@@ -53,5 +56,17 @@
             <p class="color-block__text">#6FCF97</p>
           </div>
         </div>
-  <script type="text/javascript" src="vendors~main.js"></script><script type="text/javascript" src="main.js"></script></body>
+      </div>
+      <div class="container container_w430 container_grid-top">
+        <p class="text-block text-block text_light-25p text_align-right text-block_grid-col1 text_sub-section">H1</p>
+        <p class="text-block text-block text-block_grid-col2 text-block_h90 text_sub-section">This one is the sub-section or widget title</p>
+        <p class="text-block text-block text_light-25p text_align-right text-block_grid-col1 text_item-title">H2</p>
+        <p class="text-block text-block text-block_grid-col2 text-block_h78 text_item-title">Next one is the item title inside widgets</p>
+        <p class="text-block text-block text_light-25p text_align-right text-block_grid-col1 text_label">H3</p>
+        <p class="text-block text-block text-block_grid-col2 text-block_h43 text_label">this is a label or cta text</p>
+        <p class="text-block text-block text_light-25p text_align-right text-block_grid-col1 text_bodytext">Body </p>
+        <p class="text-block text-block text-block_grid-col2 text_bodytext">This is the body text which is used for most<br>of the design, like paragraphs, lists, etc.</p>
+      </div>
+    </div>
+  </div>
 </html>
